# cmdsuzdal_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
abbadingo/: Cargo.toml
abbadingo/src/: bbdefines.rs  bitboard.rs  chessarmy.rs  chessdefines.rs  chessmove.rs  error.rs  fenrecord.rs  hexboard.rs  lib.rs
abbadingo/tests/: chessarmy_itests.rs  fenrecord_itests.rs
