[package]
name = "abbadingo"
version = "0.1.0"
authors = ["Francesco Piantini <francesco.piantini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "2.0"
ansi_term = "^0.12.1"